<resources>
    <string name="app_name">Daily Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="default_web_client_id">915022051167-knmlefq5v3169qs8j5pfslj84eqe9nki.apps.googleusercontent.com</string>

    //login
    <string name="DailyTracker">"Daily Tracker"</string>
    <string name="emailLogin">" Correo electrónico"</string>
    <string name="passLogin">" Contraseña"</string>
    <string name="loginGoogle">" Accede con Google"</string>
    <string name="loginFacebook">" Accede con Facebook"</string>
    <string name="remember">"¿Olvidaste la contraseña?"</string>
    <string name="login">"Iniciar sesión"</string>
    <string name="o">" O "</string>
    <string name="notAccount">"¿No tienes cuenta?"</string>
    <string name="signUp">"Regístrate"</string>
    <string name="accept">"He leído y acepto los "</string>
    <string name="terms">"TÉRMINOS Y CONDICIONES DE USO"</string>
    <string name="title_activity_example">Example</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Menu principal
    <string name="account_menu">Cuenta</string>
    <string name="events_menu">Eventos</string>
    <string name="home_menu">Inicio</string>
    <string name="calendar_menu">Calendario</string>
    <string name="settings_menu">Ajustes</string>
    <string name="horoscope">Horóscopo</string>
    <string name="yearProgress">Progreso del año</string>
    <string name="birthday">Cumpleaños de famosos</string>
    <string name="anniversaries">Efemérides</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="singOut">Cerrar sesión</string>
    <string name="customize">Personalizar</string>
    <string name="festivalsAroundTheWorld">Festividades en el mundo</string>
    <string name="moonPhase">Fase de la luna</string>
    <string name="quotes">Citas célebres</string>
    <string name="select_topics">Seleccionar temas</string>
    <string name="selectPrimaryColor">Seleccionar color primario</string>
    <string name="red">Rojo</string>
    <string name="green">Verde</string>
    <string name="default_text">Por defecto</string>
    <string name="blue">Azul</string>
    <string name="orange">Naranja</string>
    <string name="black">Negro</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="diary_notifications">Notificaciones diarias</string>
    <string name="birthday_date">Fecha de nacimiento</string>
    <string name="select_birthday_date">Pulsa para añadir una fecha de nacimiento</string>
    <string name="select_horoscope">Selecciona un horóscopo adicional para mostrar</string>
    <string name="main_horoscope">Horóscopo principal</string>
    <string name="secondary_horoscope">Horóscopo secundario</string>
    <string name="apply_changes">Aplicar cambios</string>
    <string name="select_birthday">Selecciona una fecha de nacimiento para ver tu horóscopo</string>
    <string name="select_horoscope_account">Selecciona un horóscopo en tu cuenta</string>
    <string name="capricornio">Capricornio</string>
    <string name="aquarius">Acuario</string>
    <string name="piscis">Piscis</string>
    <string name="aries">Aries</string>
    <string name="taurus">Tauro</string>
    <string name="gemini">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Escorpio</string>
    <string name="sagittarius">Sagitario</string>
    <string name="tyc_1">1. Uso de la Aplicación</string>
    <string name="tyc_1_1">1.1. Uso Permitido: Esta aplicación móvil tiene como único propósito la recopilación del correo electrónico del usuario para fines específicos, como el envío de actualizaciones, promociones u otros mensajes relevantes.</string>
    <string name="tyc_1_2">1.2. Restricciones: Queda estrictamente prohibido el uso de esta aplicación con cualquier propósito ilegal, fraudulento, difamatorio o que viole los derechos de terceros.</string>
    <string name="tyc_2">2. Privacidad</string>
    <string name="tyc_2_1">2.1. Recopilación de Datos: Al utilizar esta aplicación, usted autoriza la recopilación y almacenamiento de su dirección de correo electrónico. No recopilamos ni almacenamos ningún otro dato personal sin su consentimiento explícito.</string>
    <string name="tyc_2_2">2.2. Uso de la Información: Su dirección de correo electrónico será utilizada únicamente con fines internos, como enviarle comunicaciones relevantes relacionadas con la aplicación. No compartiremos su información con terceros sin su consentimiento.</string>
    <string name="tyc_2_3">2.3. Seguridad: Nos comprometemos a proteger la seguridad de su información. Sin embargo, debido a la naturaleza de Internet y la tecnología, no podemos garantizar la seguridad absoluta de los datos transmitidos a través de la aplicación.</string>
    <string name="tyc_3">3. Propiedad Intelectual</string>
    <string name="tyc_3_1">3.1. Derechos de Autor: Todos los derechos de propiedad intelectual relacionados con esta aplicación, incluidos los derechos de autor y las marcas comerciales, son propiedad exclusiva de los propietarios de la aplicación.</string>
    <string name="tyc_3_2">3.2. Uso Autorizado: Usted puede utilizar esta aplicación únicamente de acuerdo con estos términos y condiciones. No tiene derecho a modificar, copiar, distribuir, transmitir, mostrar, realizar, reproducir, publicar, licenciar, crear trabajos derivados, transferir o vender ninguna parte de la aplicación sin nuestro consentimiento previo por escrito.</string>
    <string name="tyc_4">4. Limitación de Responsabilidad</string>
    <string name="tyc_4_1">4.1. Uso por su Cuenta y Riesgo: Usted utiliza esta aplicación bajo su propio riesgo. No seremos responsables de ningún daño directo, indirecto, incidental, especial, emergente o punitivo que surja del uso o la imposibilidad de utilizar esta aplicación.</string>
    <string name="tyc_4_2">4.2. Modificaciones: Nos reservamos el derecho de modificar, suspender o interrumpir la disponibilidad de la aplicación en cualquier momento sin previo aviso.</string>
    <string name="tyc_5">5. Ley Aplicable</string>
    <string name="tyc_5_1">5.1. Legislación Aplicable: Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del lugar de residencia del propietario de la aplicación, sin tener en cuenta sus disposiciones sobre conflictos de leyes.</string>
    <string name="tyc_6">6. Contacto</string>
    <string name="tyc_6_1">6.1. Si tiene alguna pregunta sobre estos términos y condiciones, contáctenos a través de la dirección de correo electrónico proporcionada en la sección de contacto de la aplicación.</string>

</resources>