<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".login.TermsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:gravity="center_horizontal"
        android:paddingVertical="16sp"
        android:text="@string/terms"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_1_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_1_2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_2_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_2_2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_2_3"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_3_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_3_2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_4_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_4_2"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_5"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_5_1"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_6"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center_vertical"
                android:paddingTop="8dp"
                android:text="@string/tyc_6_1"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>