<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical"
    tools:context=".settings.AccountActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_today_24" />

        <TextView
            style="@style/txDefault"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/DailyTracker"
            android:textSize="36sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/account_menu"
        android:textColor="?attr/colorPrimary" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_list"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/birthday_date"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etBirthdayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_list"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/select_birthday_date"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:focusable="false"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/account_menu"
        android:textColor="?attr/colorPrimary" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_list"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:text="@string/horoscope"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinnerHoroscope"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/shape_list"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/account_menu"
        android:textColor="?attr/colorPrimary" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:layout_gravity="center"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp"
        android:fontFamily="@font/regular"
        />



</LinearLayout>